modularized artifacts using maven